# freq-dev-svn

branches/0.2/: config.py.example  start.py
branches/1.0/: config.py.example
branches/1.1/: Makefile  todo
branches/freq-moderate-tmp/: config.py.example  start.py
branches/portability/: Makefile  Makefile.in  README  config.defaults  configure  configure.ac  freq.conf.example  freqbot.conf.example  todo
branches/portability/dists/: Makefile  pkg-deinstall  pkg-install
branches/portability/doc/help/: svn-ru.txt
branches/portability/lang/: en.msg  ua.msg
branches/portability/src/kernel/: freq.py  lang.py  pluginloader.py
branches/portability/src/plugins/chatlogs/: chatlogs.py
branches/portability/src/plugins/muc/: alists.py
branches/portability/src/plugins/query/: idle.py  vcard.py
branches/portability/src/plugins/shell/: sh.py
branches/portability/templates/: chatlog_footer.html  chatlog_header.html
branches/portability/tools/: freqtool.in  getrev
branches/portability/tools/rc.d/: freebsd
port/: Makefile
tags/0.1/: config.txt.dist  freq.sqlite3
tags/0.1.191/: neutron.py  neutron.rc  pg_plugin.py
tags/1.0.0/: README  config.py.example  start.py
tags/1.1.0/: CHANGES  Makefile  README  start.py
trunk/: CHANGES  INSTALL  Makefile  Makefile.in  README  README.RU.UTF8  VERSION  bugs.txt  config.defaults  config.py  config.py.example  configure  freq.conf.example  freq.sqlite3  freqbot.conf.example  myxml1.py  myxml2.py  neutron.py  start.py  todo
trunk/doc/: Makefile
trunk/lang/: en.msg  en.py  ru.msg  ru.py  ua.msg  ua.py
(+445 files in other folders)
